--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,49 @@ private*/
 build*/
 dist*/
 *.obj
+game_music_emu_compi*/
+Thumbs.db
+*.user
+*.aps
+*.pch
+*.vspscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.bak
+*.cache
+*.ilk
+*.log
+*.cachefile
+*.resources
+*.userprefs
+*.bmp
+*.vsp
+*.dds
+*.exe
+*.fbx
+*.testsettings
+*.psess
+*.vsmdi
+*.sbr
+*responseData
+TestProject3*/
+*.exe
+*.application
+*.xnb
+*.exe.manifest
+*.pdb
+*.pfx
+*.dll
+*.CodeAnalysisLog.xml
+*.lastcodeanalysissucceeded
+obj*/
+bin*/
+TestProject*/
+[Rr]elease*/
+_ReSharper*/
+*wordRanking.json
+*recordingBlacklist.json
+*mentionBlacklist.json
+*githubAnnounceHistory.json
